-Added new mission tree for Trebizond with 25 missions (contribution by Tmasher)
-Added new shared mission tree for Berg/Cleves/Julich with 18 missions (contribution by RetrogMGXII)
-Added new mission tree for Assyria with 17 missions (contribution by RetrogMGXII)
-Overhauled and extended Sicily's mission tree
-Added 118 new Centers of Trade to the map
-Added 2 new estate privileges
-Added vanilla Chinese Faction events for the Kievan Rus
-Added event for the Yaroslavichi Triumvirate
-Added triggered province modifier for the Slavic sanctuary of Rethra
-Added Mamluk rebel type
-Added generic decisions for the new religions
-More German localization additions

#Changes
-Pope now has a much higher chance to recognize Trinacria's independence post-Vespers
-All Byzantine culture group nations can now restore the Byzantine Empire
-Romansch culture now uses new male/female and dynasty names instead of Italian ones
-Changed Saint Gallen's flag
-Changed a Thorn NI
-Extensive history changes mainly in Silesia and Switzerland
-Changed Prudnik's province name to Osoblaha
-Kemetism can now be revived by owning certain Egyptian provinces
-Gnostic zealots will forceconvert countries if Gnosticism is dominant
-Assyria is now formable by Nestorian and Mandaean nations. Doing so will no longer make you Yazidi.
-Changed the following trade goods modifiers: Barley, Rye, Hemp, Vegetables, Whales
-Soldiers Household, Impressment Office and State House now combo with many VN trade goods as well
-Venezia is no longer barred from spawning institutions
-Various mission modifier tweaks

#Balance
-Goods produced per development reduced by 1/4
-Land forcelimit per development reduced by 1/5
-Extra tax, manpower and sailor modifiers from cores reduced by 1/3
-Trade power increase from Centers of Trade reduced by 1/5 for all levels
-Adjusted some CoT levels for certain provinces
-Tweaked some development values
-Sicilian Vespers rebel spawns toned down slightly