@@ -50,11 +50,14 @@ mamluk_leadership_reform = {
 }
 
 advising_vizirate_reform = {
+	icon = "noble_muslim"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = ottoman_government
 	}
-	icon = "noble_muslim"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = ottoman_government
+	}
 	modifiers = {
 		tur_lalas_influence = 0.1
 		same_culture_advisor_cost = -0.25
@@ -62,11 +65,14 @@ advising_vizirate_reform = {
 }
 
 strength_of_the_voynuks_reform = {
+	icon = "soldiers_7"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = ottoman_government
 	}
-	icon = "soldiers_7"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = ottoman_government
+	}
 	modifiers = {
 		tur_militarists_influence = 0.1
 		discipline = 0.05
@@ -74,11 +80,14 @@ strength_of_the_voynuks_reform = {
 }
 
 askeri_officials_reform = {
+	icon = "indian_sultanate"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = ottoman_government
 	}
-	icon = "indian_sultanate"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = ottoman_government
+	}
 	modifiers = {
 		tur_pacifists_influence = 0.1
 		development_cost = -0.1
@@ -86,13 +95,98 @@ askeri_officials_reform = {
 	}
 }
 
+authorized_thing_reform = {
+	icon = "regionally_elected_commanders"
+	allow_normal_conversion = yes
+	potential = {
+		has_reform = germanic_monarchy
+	}
+	trigger = {
+		has_reform = germanic_monarchy
+	}
+	modifiers = {
+		state_maintenance_modifier = -0.25
+	}
+	ai = {
+		factor = 1.5
+	}
+}
+
+representative_thing_reform = {
+	icon = "government_for_people"
+	allow_normal_conversion = yes
+	potential = {
+		has_reform = germanic_monarchy
+	}
+	trigger = {
+		has_reform = germanic_monarchy
+	}
+	modifiers = {
+		autonomy_change_time = -0.25
+		legitimacy = 1
+	}
+	ai = {
+		factor = 1.5
+	}
+}
+
+# Republic
+consular_constitution_reform = {
+	icon = "legislative_assembly"
+	allow_normal_conversion = yes
+	potential = {
+		has_reform = italian_monarchy
+	}
+	trigger = {
+		has_reform = italian_monarchy
+	}
+	modifiers = {
+		monarch_admin_power = 1
+	}
+	effect = {
+		change_statists_vs_orangists = 0.15
+	}
+	removed_effect = {
+		change_statists_vs_orangists = -0.15
+	}
+	ai = {
+		factor = 1.5
+	}
+}
+
+captain_of_the_people_reform = {
+	icon = "commander_king"
+	allow_normal_conversion = yes
+	potential = {
+		has_reform = italian_monarchy
+	}
+	trigger = {
+		has_reform = italian_monarchy
+	}
+	modifiers = {
+		monarch_diplomatic_power = 1
+	}
+	effect = {
+		change_statists_vs_orangists = -0.15
+	}
+	removed_effect = {
+		change_statists_vs_orangists = 0.15
+	}
+	ai = {
+		factor = 1.5
+	}
+}
+
 # Theocracy
 ora_et_labora_reform = {
+	icon = "church"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = monastic_order_reform
 	}
-	icon = "church"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = monastic_order_reform
+	}
 	modifiers = {
 		abb_benedictines_influence = 0.1
 		advisor_cost = -0.1
@@ -100,11 +194,14 @@ ora_et_labora_reform = {
 }
 
 monastic_conservatism_reform = {
+	icon = "religious_leader"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = monastic_order_reform
 	}
-	icon = "religious_leader"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = monastic_order_reform
+	}
 	modifiers = {
 		abb_cluniacs_influence = 0.1
 		prestige_decay = -0.01
@@ -112,11 +209,14 @@ monastic_conservatism_reform = {
 }
 
 acquisition_of_granges_reform = {
+	icon = "paper_money_map"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = monastic_order_reform
 	}
-	icon = "paper_money_map"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = monastic_order_reform
+	}
 	modifiers = {
 		abb_cistercians_influence = 0.1
 		global_autonomy = -0.05
@@ -124,11 +224,14 @@ acquisition_of_granges_reform = {
 }
 
 strenghten_abbatial_hierarchy_reform = {
+	icon = "monastic_elections_reform"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = monastic_order_reform
 	}
-	icon = "monastic_elections_reform"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = monastic_order_reform
+	}
 	modifiers = {
 		abb_benedictines_influence = 0.1
 		legitimacy = 0.25
@@ -138,12 +241,15 @@ strenghten_abbatial_hierarchy_reform = {
 }
 
 noble_chanceries_reform = {
-	potential = {
-		has_reform = monastic_order_reform
-	}
 	icon = "nobleman"
 	allow_normal_conversion = yes
 	royal_marriage = yes
+	potential = {
+		has_reform = monastic_order_reform
+	}
+	trigger = {
+		has_reform = monastic_order_reform
+	}
 	modifiers = {
 		abb_cluniacs_influence = 0.1
 		leader_cost = -0.1
@@ -151,11 +257,14 @@ noble_chanceries_reform = {
 }
 
 episcopal_competences_reform = {
+	icon = "pope"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = monastic_order_reform
 	}
-	icon = "pope"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = monastic_order_reform
+	}
 	modifiers = {
 		abb_cistercians_influence = 0.1
 		governing_capacity = 100
@@ -165,11 +274,14 @@ episcopal_competences_reform = {
 
 #Tribes
 sept_privileges_reform = {
+	icon = "imperial_nobility_reform"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = tribal_kingdom
 	}
-	icon = "imperial_nobility_reform"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = tribal_kingdom
+	}
 	modifiers = {
 		cla_flatha_influence = 0.1
 		global_regiment_recruit_speed = -0.1
@@ -178,11 +290,14 @@ sept_privileges_reform = {
 }
 
 celtic_revival_reform = {
+	icon = "conciliarism_reform"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = tribal_kingdom
 	}
-	icon = "conciliarism_reform"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = tribal_kingdom
+	}
 	modifiers = {
 		cla_druid_influence = 0.1
 		tolerance_own = 1
@@ -191,11 +306,14 @@ celtic_revival_reform = {
 }
 
 memorial_tradition_reform = {
+	icon = "soldiers_4"
+	allow_normal_conversion = yes
 	potential = {
 		has_reform = tribal_kingdom
 	}
-	icon = "soldiers_4"
-	allow_normal_conversion = yes
+	trigger = {
+		has_reform = tribal_kingdom
+	}
 	modifiers = {
 		cla_filid_influence = 0.1
 		global_institution_spread = 0.15
