@@ -32,7 +32,7 @@ country_event = {
 		NOT = { has_reform = military_dictatorship_reform }
 		NOT = { has_reform = admiralty_reform }
 		NOT = { has_reform = prussian_republic_reform }
-		NOT = { has_disaster =  bonfire_of_the_vanities_disaster }
+		NOT = { has_disaster = bonfire_of_the_vanities_disaster }
 		NOT = {	
 			AND = {	
 				has_reform = banate_reform	
@@ -318,7 +318,7 @@ country_event = {
 		NOT = { has_reform = military_dictatorship_reform }
 		NOT = { has_reform = admiralty_reform }
 		NOT = { has_reform = prussian_republic_reform }
-		NOT = { has_disaster =  bonfire_of_the_vanities_disaster }
+		NOT = { has_disaster = bonfire_of_the_vanities_disaster }
 		NOT = { has_country_modifier = just_had_revolution_bringing_someone_to_power_timer }
 		NOT = {	
 			AND = {	
