@@ -387,6 +387,14 @@
  strength_of_the_voynuks_reform_desc: ""
  askeri_officials_reform: "Askeri Officials"
  askeri_officials_reform_desc: ""
+ consular_constitution_reform: "Consular Constitution"
+ consular_constitution_reform_desc: ""
+ captain_of_the_people_reform: "Captain of the People"
+ captain_of_the_people_reform_desc: ""
+ authorized_thing_reform: "Authorized [Root.GetGermanicAssembly]"
+ authorized_thing_reform_desc: ""
+ representative_thing_reform: "Representative [Root.GetGermanicAssembly]"
+ representative_thing_reform_desc: ""
  abb_cluniacs: "The Cluniacs"
  abb_cistercians: "The Cistercians"
  abb_benedictines: "The Benedictines"
