@@ -390,6 +390,14 @@
  strength_of_the_voynuks_reform_desc: ""
  askeri_officials_reform: "Askerî-Beamte"
  askeri_officials_reform_desc: ""
+ consular_constitution_reform: "Consular Constitution"
+ consular_constitution_reform_desc: ""
+ captain_of_the_people_reform: "Captain of the People"
+ captain_of_the_people_reform_desc: ""
+ authorized_thing_reform: "Authorized [Root.GetGermanicAssembly]"
+ authorized_thing_reform_desc: ""
+ representative_thing_reform: "Representative [Root.GetGermanicAssembly]"
+ representative_thing_reform_desc: ""
  abb_cluniacs: "Cluniazenser"
  abb_cistercians: "Zisterzienser"
  abb_benedictines: "Benediktiner"
