@@ -17,6 +17,7 @@
 -Added new mission tree for Assyria with 17 missions (contribution by RetrogMGXII)
 -Overhauled and extended Sicily's mission tree
 -Added 118 new Centers of Trade to the map
+-Added 4 new government reforms
 -Added 2 new estate privileges
 -Added vanilla Chinese Faction events for the Kievan Rus
 -Added event for the Yaroslavichi Triumvirate
@@ -56,7 +57,7 @@
 -Marketplaces, Barracks, Docks and Shipyards now cost 150 ducats up from 100
 
 #Fixes
--Small fixes for the following mission trees: Sweden, Navarra, Serbia, Swabia, Bohemia, Sicily, Venice, Denmark, Normandy, Portugal, France, Scotland, Baghdad, Holland/Netherlands, Seljuk, Prussia, Savoy, Lithuania, Byzantium, Luxembourg, Sardinia, Spain, Epirus, Novgorod
+-Small fixes for the following mission trees: Sweden, Navarra, Serbia, Swabia, Bohemia, Sicily, Venice, Denmark, Normandy, Portugal, France, Scotland, Baghdad, Holland/Netherlands, Seljuk, Prussia, Savoy, Lithuania, Byzantium, Luxembourg, Sardinia, Spain, Epirus, Novgorod, Tuscany
 -Fixed major decision bug where heretic AI PU juniors could flip their overlord's ruler and heir religions and nuke their stability
 -Fixed the Support Independence agenda targeting French Fiefs thereby making it impossible
 -Build a House of Worship agenda now appears for Monuments too
